@@ -1,5 +1,5 @@
 # Cheatsheet
-ToLaserBlade-Fabric v7.1.0
+ToLaserBlade-Fabric v7.2.0
 
 ## Items
 ### Laser Blade Blueprint
@@ -101,20 +101,19 @@ When you put a laser blade in a dispenser and activate it, you can attack the mo
 ### Laser Furnace
 When a laser trap is fired at a furnace, it will light the furnace.
 
-### Laser Blade Sound Events
-You can add audio files that will be played when a laser blade is swung.
+### Sound Events
+The following audio file paths are those defined in the default `assets/tolaserblade/sounds.json`.
 
-- `(resource_pack_root_dir)/assets/tolaserblade/sounds/item/laser_blade/swing.ogg`
-- `(resource_pack_root_dir)/assets/tolaserblade/sounds/item/laser_blade_fp/swing.ogg`
+Sound events fired when a laser blade is swung:
+- `tolaserblade:item.laser_blade.swing` - `assets/tolaserblade/sounds/item/laser_blade/swing.ogg`
+- `tolaserblade:item.laser_blade_fp.swing` - `assets/tolaserblade/sounds/item/laser_blade_fp/swing.ogg`
 
-You can add audio files that will be played when a laser blade hit an entity.
+Sound events fired when a laser blade is hit:
+- `tolaserblade:item.laser_blade.hit` - `assets/tolaserblade/sounds/item/laser_blade/hit.ogg`
+- `tolaserblade:item.laser_blade_fp.hit` - `assets/tolaserblade/sounds/item/laser_blade_fp/hit.ogg`
 
-- `(resource_pack_root_dir)/assets/tolaserblade/sounds/item/laser_blade/hit.ogg`
-- `(resource_pack_root_dir)/assets/tolaserblade/sounds/item/laser_blade_fp/hit.ogg`
-
-You can add audio files that will be played when a laser trap is activated.
-
-- `(resource_pack_root_dir)/assets/tolaserblade/sounds/item/laser_trap/activate.ogg`
+Sound event fired when a laser trap is activated:
+- `tolaserblade:item.laser_trap.activate` - `assets/tolaserblade/sounds/item/laser_trap/activate.ogg`
 
 ## Configurations
 `(game_dir)/config/tolaserblade.toml`
