@@ -7,7 +7,7 @@ loader_version=0.16.10
 
 # Mod Properties
 mod_id=tolaserblade
-mod_version=7.1.0
+mod_version=7.2.0-alpha.1
 maven_group=com.github.iunius118.tolaserblade
 archives_base_name=ToLaserBlade-fabric
 
